add social to committee section

--- a/_posts/2017-07-01-intro.md
+++ b/_posts/2017-07-01-intro.md
@@ -17,4 +17,4 @@ style: center
 <br><br>
 
 
-[![Facebook](img/fb_ico.png)]<a target="_blank" (https://web.facebook.com/brainhackWAW)> [![Twitter](img/twitter_ico.png)](https://twitter.com/brainhackW)
+[![Facebook](img/fb_ico.png)](https://web.facebook.com/brainhackWAW) [![Twitter](img/twitter_ico.png)](https://twitter.com/brainhackW)
