--- a/_posts/2017-07-01-intro.md
+++ b/_posts/2017-07-01-intro.md
@@ -16,5 +16,6 @@ style: center
 
 <br>
 
-
-[![Facebook](img/fb_ico.png)](https://web.facebook.com/brainhackWAW) [![Twitter](img/twitter_ico.png)](https://twitter.com/brainhackW)
+<a href="https://web.facebook.com/brainhackWAW">
+ <img src="img/fb_ico.png" alt="Facebook">
+</a> [![Twitter](img/twitter_ico.png)](https://twitter.com/brainhackW)
