add target=_blank to social

--- a/_posts/2017-07-01-intro.md
+++ b/_posts/2017-07-01-intro.md
@@ -16,6 +16,6 @@ style: center
 
 <br>
 
-<a href="https://web.facebook.com/brainhackWAW">
+<a href="https://web.facebook.com/brainhackWAW" target="_blank">
  <img src="img/fb_ico.png" alt="Facebook">
 </a> [![Twitter](img/twitter_ico.png)](https://twitter.com/brainhackW)
