add target=_blank to social

--- a/_posts/2017-07-01-intro.md
+++ b/_posts/2017-07-01-intro.md
@@ -18,4 +18,7 @@ style: center
 
 <a href="https://web.facebook.com/brainhackWAW" target="_blank">
  <img src="img/fb_ico.png" alt="Facebook">
-</a> [![Twitter](img/twitter_ico.png)](https://twitter.com/brainhackW)
+
+ <a href="https://twitter.com/brainhackW" target="_blank">
+  <img src="img/twitter_ico.png" alt="Twitter">
+</a>
