--- a/_posts/2017-07-10-comitee.md
+++ b/_posts/2017-07-10-comitee.md
@@ -1,6 +1,6 @@
 ---
 title: "committee"
-bg: main_gray #red 
+bg: main_gray #red
 color: white
 
 
@@ -18,7 +18,7 @@ color: white
 
 {% include profile-card.html avatarurl="olek.jpg" profilename="Aleksander Molak" affiliation="Faculty of Psychology, University of Warsaw,<br> Warsaw, Poland" twitter="AleksanderMolak" researchgate="Aleksnader_Molak" git="AlxdrMlk" %}
 
-{% include profile-card.html avatarurl="martyna_p.jpg" profilename="Martyna Płomecka, Msc" affiliation="Laboratory of Brain Imaging, Nencki Institute of Experimental Biology PAS, <br>Warsaw, Poland"%}
+{% include profile-card.html avatarurl="martyna_p.jpg" profilename="Martyna Płomecka, Msc" affiliation="University of Zurich, Department of Psychology, Methods of Plasticity Research, <br>Zurich, Switzerland"%}
 
 </div>
 
