--- a/_posts/2017-07-02-about.md
+++ b/_posts/2017-07-02-about.md
@@ -22,11 +22,11 @@ Participation in the conference is not mandatory to take part in Brainhack but w
 
 **Deadline for project proposals**:                     11.01.2019
 
-**Announcement of projects**:                            TBA
+**Announcement of projects**:                            20.01.2019
 
-**Participant registration starts:**                     TBA
+**Participant registration starts:**                     21.01.2019
 
-**Deadline for participant registration**:               TBA
+**Deadline for participant registration**:               18.02.2019
 
 Please send all the related questions at the mailing address: [brainhackwarsaw@gmail.com](mailto:brainhackwarsaw@gmail.com)
 
