--- a/_posts/2017-07-05-speakers.md
+++ b/_posts/2017-07-05-speakers.md
@@ -10,20 +10,20 @@ color: white
 ## Will let you know soon 😉
 
 <!--
-<a name="hanke"></a>
+<a name="toro"></a>
 
-{% include speaker-card.html avatarurl="michael.jpg" profilename="Michael Hanke, PhD "  homepage="http://psychoinformatics.de/" affiliation="Psychoinformatics Lab, Institut für Psychologie, Otto-von-Guericke-Universität,<br> Magdeburg, Germany"%}
+{% include speaker-card.html avatarurl="toro.jpg" profilename="Roberto Toro, PhD "  homepage="https://research.pasteur.fr/en/member/roberto-toro/" affiliation="Department of Neuroscience, Institut Pasteur,<br> Paris, France"%}
 
 
-#### Doing open science for your own benefit
-**Abstract:** Everyday cognition involves a large variety of concurrent neural processes that handle an incredible amount of sensory inputs in order to generate appropriate responses when interacting with the environment. It can be argued that studying any of these aspects of cognition in isolation, as it is often the case in feature-deprived laboratory experiments, yields an over-simplified or over-specialized understanding of the true nature of brain function. In order to fully understand “how the brain works”, it is essential to study the complex inter-play of cognitive processes in a rich natural environment and go beyond the
-localization of individual aspects of brain function. I will outline a strategy to approach this herculean task that is based on the core principles of open-science and aims to enable collaboration between research groups and disciplines.
+####
+**Abstract:**
 
 **Bio:**
-Michael obtained his PhD in 2009 from Institute of Psychology, Otto-von-Guericke-University in Magdeburg, Germany. Today, he has a Junior professor position at his Alma Mater. Dr Hanke is an expert in sensory processing in vision and other modalities, and in sensory representations in the cortex. He is also actively promoting the ideas of open and reproducible science, and was one of the founders of the Brainhack organization which we represent at the AoN Brainhack Warsaw.
+Roberto Toro is a distinguished personality from open science movement with great knowledge on development and evolution of brain anatomy
+He is currently leading a team of students (PhD, MSc) from interdisciplinary backgrounds. They develop computational neuroanatomy methods based on their theoretical models which they use to analyse the normal diversity of human brain anatomy, as well as to look for differences associated with neurodevelopmental pathologies. He is particularly interested in Autism Spectrum Disorders.
+--->
 
-
-
+<!--
 <a name="kirstie"></a>
 {% include speaker-card.html avatarurl="kirstie.png" profilename="Kirstie Whitaker, PhD "   homepage="https://whitakerlab.github.io" affiliation="Brain Mapping Unit, Department of Psychiatry, University of Cambridge" %}
 #### Shooting for the stars: Moving from reproducible to open research
