--- a/_posts/2017-07-06-projects.md
+++ b/_posts/2017-07-06-projects.md
@@ -5,6 +5,9 @@ color: white
 ---
 # Projects
 
+###**The submission of projects is officially closed.**
+Now we are waiting for an announcement which of the projects we have submitted this year will be fulfilled.
+<!--
 ### **The call for project proposals is now OPEN**.
 
 ### Form and other necessary information for submitting projects is available [here](https://docs.google.com/document/d/1V_KD53onGPOw6Z1454u-YV9CkoKOSGQLZEA5QeQtP2w/edit#)
@@ -20,7 +23,7 @@ The proposals can include various forms of a group activity, e.g., data analysis
 6. a maximal and minimal number of participants on the project,
 7. what participants gain / learn from the project?,
 8. can the project be extended to a peer-reviewed paper if the results are promising?
-
+--->
 <!--
 Two exemplary projects which will take place at this event, are listed below:
 
