--- a/_posts/2017-07-10-comitee.md
+++ b/_posts/2017-07-10-comitee.md
@@ -12,9 +12,9 @@ color: white
 
 <div id="profile-container">
 
-{% include profile-card.html avatarurl="karolina.jpg" profilename="Karolina Baranowska, Eng." affiliation="Laboratory of Brain Imaging, Nencki Institute of Experimental Biology PAS, ,<br> Faculty of Physics, Warsaw University of Technology, <br>Warsaw, Poland" git="catolina" twitter="kmbaranowska"%}
+{% include profile-card.html avatarurl="karolina.jpg" profilename="Karolina Baranowska, Eng" affiliation="Laboratory of Brain Imaging, Nencki Institute of Experimental Biology PAS, <br> Faculty of Physics, Warsaw University of Technology, <br>Warsaw, Poland" git="catolina" twitter="kmbaranowska"%}
 
-{% include profile-card.html avatarurl="karolinaF.jpg" profilename="Karolina Finc" affiliation="Centre for Modern Interdisciplinary Technologies, <br>Toruń, Poland" git="kfinc" twitter="karofinc" researchgate="Karolina_Finc"%}
+{% include profile-card.html avatarurl="karolinaF.jpg" profilename="Karolina Finc, MSc" affiliation="Centre for Modern Interdisciplinary Technologies, <br>Toruń, Poland" git="kfinc" twitter="karofinc" researchgate="Karolina_Finc"%}
 
 {% include profile-card.html avatarurl="ada.jpg" profilename="Ada Kochlewska" affiliation="Faculty of Physics, University of Warsaw, <br>Warsaw, Poland"%}
 
