--- a/_posts/2017-07-07-schedule.md
+++ b/_posts/2017-07-07-schedule.md
@@ -10,7 +10,7 @@ color: darkblue
 
 ## TBA
 
-<!--
+
 {% assign color1 = '#ffffff' %}
 {% assign color2 = '#eeeeee' %}
 {% assign lecture = '#EF9A9A' %}
@@ -27,13 +27,13 @@ color: darkblue
 <tr>
 <td  bgcolor="{{ color1 }}"  width="24" height="12">&nbsp;</td>
 <td bgcolor="{{ color1 }}" width="118">
-<p lang="en-US"><span lang="en-US"><strong>Friday, 17th November 2017</strong></span></p>
+<p lang="en-US"><span lang="en-US"><strong>Friday, 1st March 2019</strong></span></p>
 </td>
 <td bgcolor="{{ color1 }}" width="127">
-<p lang="en-US"><span lang="en-US"><strong>Saturday, 18th November 2017</strong></span></p>
+<p lang="en-US"><span lang="en-US"><strong>Saturday, 2nd March 2019</strong></span></p>
 </td>
 <td bgcolor="{{ color1 }}" width="119">
-<p lang="en-US"><span lang="en-US"><strong>Sunday, 19th November 2017</strong></span></p>
+<p lang="en-US"><span lang="en-US"><strong>Sunday, 3rd March 2019</strong></span></p>
 </td>
 </tr>
 
@@ -44,9 +44,9 @@ color: darkblue
 </td>
 <td bgcolor="{{  color2  }}" width="118">&nbsp;</td>
 <td bgcolor="{{ hacking2 }}" width="127">
-<p lang="en-US"><span lang="en-US">brain hacking</span></p>
+<p lang="en-US"><span lang="en-US">Brain hacking</span></p>
 </td>
-<td bgcolor="{{  hacking2  }}" width="119"><p lang="en-US"><span lang="en-US">brain hacking</span></p></td>
+<td bgcolor="{{  hacking2  }}" width="119"><p lang="en-US"><span lang="en-US">Brain hacking</span></p></td>
 </tr>
 
 <tr>
@@ -224,4 +224,3 @@ color: darkblue
 
 </tbody>
 </table>
--->
