--- a/_posts/2017-07-10-comitee.md
+++ b/_posts/2017-07-10-comitee.md
@@ -20,7 +20,7 @@ color: white
 
 {% include profile-card.html avatarurl="olek.jpg" profilename="Aleksander Molak" affiliation="Faculty of Psychology, University of Warsaw,<br> Warsaw, Poland" twitter="AleksanderMolak" researchgate="Aleksnader_Molak" git="AlxdrMlk" %}
 
-{% include profile-card.html avatarurl="martyna_p.jpg" profilename="Martyna Płomecka, Msc" affiliation="University of Zurich, Department of Psychology, Methods of Plasticity Research, <br>Zurich, Switzerland"%}
+{% include profile-card.html avatarurl="martyna_p.jpg" profilename="Martyna Płomecka, MSc" affiliation="University of Zurich, Department of Psychology, Methods of Plasticity Research, <br>Zurich, Switzerland" researchgate="Martyna_Plomecka2" twitter ="MartynaPlomecka" %}
 
 </div>
 
@@ -28,13 +28,13 @@ color: white
 ## Advisory board:
 <div id="profile-container">
 
-{% include advisory-card.html avatarurl="nat.jpg" profilename="Natalia Bielczyk, Msc " affiliation="Solaris Research and Development Foundation, <br>Nijmegen, The Netherlands" homepage="https://www.nataliabielczyk.com" twitter="nataliabielczyk" researchgate="Natalia_Bielczyk2"%}
+{% include advisory-card.html avatarurl="nat.jpg" profilename="Natalia Bielczyk, MSc " affiliation="Solaris Research and Development Foundation, <br>Nijmegen, The Netherlands" homepage="https://www.nataliabielczyk.com" twitter="nataliabielczyk" researchgate="Natalia_Bielczyk2"%}
 
 {% include advisory-card.html avatarurl="bielski.JPG" profilename="Krzysztof Bielski" affiliation="Laboratory of Psychophysiology, Nencki Institute of Experimental Biology,<br> Warsaw, Poland"  twitter="KrzysztofBiels1"%}
 
 {% include advisory-card.html avatarurl="borek.jpg" profilename="Daniel Borek" affiliation="Department of Data Analysis, Faculty of Psychology and Educational Sciences,<br> Ghent University, <br>Ghent, Belgium" git="danieltomasz" twitter="danieltomasz"%}
 
-{% include advisory-card.html avatarurl="martyna.jpg" profilename="Martyna Łempicka, Msc" affiliation="Graduate of the Faculty of Physic, University of Warsaw,<br> Warsaw, Poland"  twitter="EmpickaMartyna"%}
+{% include advisory-card.html avatarurl="martyna.jpg" profilename="Martyna Łempicka, MSc" affiliation="Graduate of the Faculty of Physic, University of Warsaw,<br> Warsaw, Poland"  twitter="EmpickaMartyna"%}
 
 {% include advisory-card.html avatarurl="jaroslaw.jpg" profilename="Jarosław Żygierewicz, PhD" affiliation="Neuroinformatics, <br> Biomedical Physics Division,<br> Faculty of Physics, University of Warsaw,<br> Warsaw, Poland" %}
 </div>
