--- a/_posts/2017-07-05-speakers.md
+++ b/_posts/2017-07-05-speakers.md
@@ -4,24 +4,24 @@ bg:    cyan
 color: white
 ---
 # Speakers
-
+<!--
 ## We're almost there... ❤️
 
 ## Will let you know soon 😉
+-->
 
-<!--
 <a name="toro"></a>
 
 {% include speaker-card.html avatarurl="toro.jpg" profilename="Roberto Toro, PhD "  homepage="https://research.pasteur.fr/en/member/roberto-toro/" affiliation="Department of Neuroscience, Institut Pasteur,<br> Paris, France"%}
 
 
 ####
-**Abstract:**
+**Abstract: TBA**
 
 **Bio:**
 Roberto Toro is a distinguished personality from open science movement with great knowledge on development and evolution of brain anatomy
 He is currently leading a team of students (PhD, MSc) from interdisciplinary backgrounds. They develop computational neuroanatomy methods based on their theoretical models which they use to analyse the normal diversity of human brain anatomy, as well as to look for differences associated with neurodevelopmental pathologies. He is particularly interested in Autism Spectrum Disorders.
---->
+
 
 <!--
 <a name="kirstie"></a>
