--- a/_posts/2017-07-07-schedule.md
+++ b/_posts/2017-07-07-schedule.md
@@ -1,14 +1,14 @@
 ---
 title: "schedule"
-bg: light_yellow
+bg: ''#eeeeee' #light_yellow
 color: darkblue
 
 
 ---
 
-# Schedule
+# Preliminary schedule
 
-## TBA
+
 
 
 {% assign color1 = '#ffffff' %}
