--- a/_posts/2017-07-07-schedule.md
+++ b/_posts/2017-07-07-schedule.md
@@ -55,10 +55,10 @@ color: darkblue
 </td>
 <td bgcolor="{{ color1 }}" width="118">&nbsp;</td>
 <td bgcolor="{{ hacking1 }}" width="127">
-<p lang="en-US"><span lang="en-US">brain hacking</span></p>
+<p lang="en-US"><span lang="en-US">Brain hacking</span></p>
 </td>
 <td bgcolor="{{ hacking1 }}" width="119">
-<p lang="en-US"><span lang="en-US">brain hacking</span></p>
+<p lang="en-US"><span lang="en-US">Brain hacking</span></p>
 </td>
 </tr>
 
@@ -68,10 +68,10 @@ color: darkblue
 </td>
 <td bgcolor="{{  color2  }}" width="118">&nbsp;</td>
 <td bgcolor="{{  hacking2  }}" width="127">
-<p lang="en-US"><span lang="en-US">brain hacking</span></p>
+<p lang="en-US"><span lang="en-US">Brain hacking</span></p>
 </td>
 <td bgcolor="{{  hacking2  }}" width="119">
-<p lang="en-US"><span lang="en-US">brain hacking</span></p>
+<p lang="en-US"><span lang="en-US">Brain hacking</span></p>
 </td>
 </tr>
 <tr>
@@ -79,11 +79,11 @@ color: darkblue
 <p lang="en-US">12:00</p>
 </td>
 <td bgcolor="{{ color1 }}" width="118">&nbsp;</td>
-<td bgcolor="{{  lecture  }}" width="127">
-<p lang="en-US"><span lang="en-US">ignite talk: Michael Hanke</span></p>
-<p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#hanke">Doing open science for your own benefit</a></em></span></p></td>
+<td bgcolor="{{  hacking1  }}" width="127">
+<p lang="en-US"><span lang="en-US">Brain hacking/span></p>
+</td>
 <td bgcolor="{{ hacking1 }}" width="119">
-<p lang="en-US"><span lang="en-US">brain hacking</span></p>
+<p lang="en-US"><span lang="en-US">Brain hacking</span></p>
 </td>
 
 </tr>
@@ -93,10 +93,10 @@ color: darkblue
 </td>
 <td bgcolor="{{  color2  }}" width="118">&nbsp;</td>
 <td bgcolor="{{  dinner }}" width="127">
-<p lang="en-US"><span lang="en-US">lunch</span></p>
+<p lang="en-US"><span lang="en-US">Lunch</span></p>
 </td>
 <td bgcolor="{{  dinner }}" width="119">
-<p lang="en-US"><span lang="en-US">lunch</span></p>
+<p lang="en-US"><span lang="en-US">Lunch</span></p>
 </td>
 </tr>
 <tr>
@@ -105,10 +105,10 @@ color: darkblue
 </td>
 <td bgcolor="{{ color1 }}" width="118">&nbsp;</td>
 <td bgcolor="{{ hacking1 }}" width="127">
-<p lang="en-US"><span lang="en-US">brain hacking</span></p>
+<p lang="en-US"><span lang="en-US">Brain hacking</span></p>
 </td>
 <td bgcolor="{{ presentation1 }}" width="119">
-<p lang="en-US"><span lang="en-US">preparing final presentations</span></p>
+<p lang="en-US"><span lang="en-US">Preparing final presentations</span></p>
 </td>
 </tr>
 <tr>
@@ -117,7 +117,7 @@ color: darkblue
 </td>
 <td bgcolor="{{  color2  }}" width="118">&nbsp;</td>
 <td bgcolor="{{  hacking2  }}" width="127">
-<p lang="en-US"><span lang="en-US">brain hacking</span></p>
+<p lang="en-US"><span lang="en-US">Brain hacking</span></p>
 </td>
 <td bgcolor="{{  presentation2  }}" width="119">
 <p lang="en-US"><span lang="en-US">a round of 10min final presentations</span></p>
