--- a/_posts/2017-07-07-schedule.md
+++ b/_posts/2017-07-07-schedule.md
@@ -1,13 +1,12 @@
 ---
 title: "schedule"
-bg: '#eeeeee' #light_yellow
+bg: white
 color: darkblue
 
 
 ---
 
 # Preliminary schedule
-
 
 
 
@@ -74,19 +73,20 @@ color: darkblue
 <p lang="en-US"><span lang="en-US">Brain hacking</span></p>
 </td>
 </tr>
+
 <tr>
 <td bgcolor="{{ color1 }}" width="24" height="5">
 <p lang="en-US">12:00</p>
 </td>
 <td bgcolor="{{ color1 }}" width="118">&nbsp;</td>
-<td bgcolor="{{  hacking1  }}" width="127">
-<p lang="en-US"><span lang="en-US">Brain /span></p>
+<td bgcolor="{{ hacking1 }}" width="127">
+<p lang="en-US"><span lang="en-US">Brain hacking</span></p>
 </td>
 <td bgcolor="{{ hacking1 }}" width="119">
-<p lang="en-US"><span lang="en-US">brain hacking</span></p>
+<p lang="en-US"><span lang="en-US">Brain hacking</span></p>
 </td>
-
 </tr>
+
 <tr>
 <td bgcolor="{{  color2  }}" width="24" height="5">
 <p lang="en-US">13:00</p>
