--- a/_posts/2017-07-07-schedule.md
+++ b/_posts/2017-07-07-schedule.md
@@ -93,54 +93,58 @@ color: darkblue
 </td>
 <td bgcolor="{{  color2  }}" width="118">&nbsp;</td>
 <td bgcolor="{{  dinner }}" width="127">
-<p lang="en-US"><span lang="en-US">lunch</span></p>
+<p lang="en-US"><span lang="en-US">Lunch</span></p>
 </td>
 <td bgcolor="{{  dinner }}" width="119">
-<p lang="en-US"><span lang="en-US">lunch</span></p>
+<p lang="en-US"><span lang="en-US">Lunch</span></p>
 </td>
 </tr>
+
 <tr>
 <td bgcolor="{{ color1 }}" width="24" height="5">
 <p lang="en-US">14:00</p>
 </td>
 <td bgcolor="{{ color1 }}" width="118">&nbsp;</td>
 <td bgcolor="{{ hacking1 }}" width="127">
-<p lang="en-US"><span lang="en-US">brain hacking</span></p>
+<p lang="en-US"><span lang="en-US">Brain hacking</span></p>
 </td>
 <td bgcolor="{{ presentation1 }}" width="119">
-<p lang="en-US"><span lang="en-US">preparing final presentations</span></p>
+<p lang="en-US"><span lang="en-US">Preparing final presentations</span></p>
 </td>
 </tr>
+
 <tr>
 <td bgcolor="{{  color2  }}" width="24" height="5">
 <p lang="en-US">15:00</p>
 </td>
 <td bgcolor="{{  color2  }}" width="118">&nbsp;</td>
 <td bgcolor="{{  hacking2  }}" width="127">
-<p lang="en-US"><span lang="en-US">brain hacking</span></p>
+<p lang="en-US"><span lang="en-US">Brain hacking</span></p>
 </td>
 <td bgcolor="{{  presentation2  }}" width="119">
-<p lang="en-US"><span lang="en-US">a round of 10min final presentations</span></p>
+<p lang="en-US"><span lang="en-US">A round of 10-min final presentations</span></p>
 </td>
 </tr>
+
 <tr>
 <td bgcolor="{{ color1 }}" width="24" height="5">
 <p lang="en-US">16:00</p>
 </td>
 <td bgcolor="{{ color1 }}" width="118">&nbsp;</td>
-<td bgcolor="{{ hacking1 }}" width="127">
-<p lang="en-US"><span lang="en-US">brain hacking</span></p>
+<td bgcolor="{{ dinner }}" width="127">
+<p lang="en-US"><span lang="en-US">Tea-time break</span></p>
 </td>
 <td bgcolor="{{  presentation1  }}" width="119">
-<p lang="en-US"><span lang="en-US">a round of 10min final presentations</span></p>
+<p lang="en-US"><span lang="en-US">A round of 10-min final presentations</span></p>
 </td>
 </tr>
+
 <tr>
 <td bgcolor="{{  color2  }}" width="24" height="38">
 <p lang="en-US">17:00</p>
 </td>
 <td bgcolor="{{  dinner }}" width="118">
-<p lang="en-US"><span lang="en-US">opening, welcome drinks</span></p>
+<p lang="en-US"><span lang="en-US">Opening, welcome drinks</span></p>
 </td>
 <td bgcolor="{{  lecture  }}" width="127">
 <p lang="en-US"><span lang="en-US">tea-time talk: Charl Linssen</span></p>
