--- a/_posts/2017-07-07-schedule.md
+++ b/_posts/2017-07-07-schedule.md
@@ -147,41 +147,42 @@ color: darkblue
 <p lang="en-US"><span lang="en-US">Opening, welcome drinks</span></p>
 </td>
 <td bgcolor="{{  lecture  }}" width="127">
-<p lang="en-US"><span lang="en-US">tea-time talk: Charl Linssen</span></p>
-<p><span lang="en-US"><em><a href="{{ url }}index.html#charl">Convergence between artificial intelligence and simulation of the brain: from theory to github</a></em></span></p>
+<p lang="en-US"><span lang="en-US">Brain hacking </span></p>
 </td>
 <td bgcolor="{{  lecture  }}" width="119">
-<p lang="en-US"><span lang="en-US">closing talk: Kirstie Whitaker</span></p>
-<p><span lang="en-US"><em><a href="{{ url }}index.html#kirstie">Shooting for the stars: Moving from reproducible to open research (skype talk)</a></em></span></p>
+<p lang="en-US"><span lang="en-US">Googbye drinks</span></p>
 </td>
 </tr>
+
 <tr>
 <td bgcolor="{{ color1 }}" width="24" height="13">
 <p lang="en-US">18:00</p>
 </td>
 <td bgcolor="{{  presentation1  }}" width="118">
-<p lang="en-US"><span lang="en-US">presentations by partnering institutions</span></p>
+<p lang="en-US"><span lang="en-US">5-min blitz project opening presentations</span></p>
 </td>
 <td bgcolor="{{ hacking1 }}" width="127">
-<p lang="en-US"><span lang="en-US">brain hacking</span></p>
+<p lang="en-US"><span lang="en-US">Brain hacking</span></p>
 </td>
 <td bgcolor="{{  dinner }}" width="119">
-<p lang="en-US"><span lang="en-US">goodbye drinks</span></p>
+<p lang="en-US"><span lang="en-US">Goodbye drinks</span></p>
 </td>
 </tr>
+
 <tr>
 <td bgcolor="{{  color2  }}" width="24" height="38">
 <p lang="en-US">19:00</p>
 </td>
 <td bgcolor="{{  presentation2  }}" width="118">
-<p lang="en-US"><span lang="en-US">5min blitz project opening presentations</span></p>
+<p lang="en-US"><span lang="en-US">Prestentations by partners&sponsors </span></p>
 </td>
 <td bgcolor="{{  hacking2  }}" width="127">
-<p lang="en-US"><span lang="en-US">brain hacking</span></p>
+<p lang="en-US"><span lang="en-US">Brain hacking</span></p>
 </td>
 <td bgcolor="{{  color2  }}" width="119">&nbsp;</td>
 
 </tr>
+
 <tr>
 <td bgcolor="{{ color1 }}" width="24" height="13">
 <p lang="en-US">20:00</p>
@@ -190,7 +191,7 @@ color: darkblue
 <p lang="en-US"><span lang="en-US">a small excursion together to Warsaw downtown</span></p>
 </td>
 <td bgcolor="{{  dinner }}" width="127">
-<p lang="en-US"><span lang="en-US">dinner</span></p>
+<p lang="en-US"><span lang="en-US">Dinner</span></p>
 </td>
 <td bgcolor="{{  color1  }}" width="119">&nbsp;</td>
 
@@ -206,6 +207,7 @@ color: darkblue
 <td bgcolor="{{  color2  }}" width="119">&nbsp;</td>
 </tr>
 <tr>
+
 <td bgcolor="{{ color1 }}" width="24" height="5">
 <p lang="en-US">22:00</p>
 </td>
