--- a/_posts/2017-07-07-schedule.md
+++ b/_posts/2017-07-07-schedule.md
@@ -5,7 +5,10 @@ color: darkblue
 
 
 ---
+# Schedule
+#TBA
 
+<!--
 # Preliminary schedule
 
 
@@ -146,10 +149,10 @@ color: darkblue
 <td bgcolor="{{  dinner }}" width="118">
 <p lang="en-US"><span lang="en-US">Opening, welcome drinks</span></p>
 </td>
-<td bgcolor="{{  lecture  }}" width="127">
+<td bgcolor="{{  hacking1  }}" width="127">
 <p lang="en-US"><span lang="en-US">Brain hacking </span></p>
 </td>
-<td bgcolor="{{  lecture  }}" width="119">
+<td bgcolor="{{  dinner  }}" width="119">
 <p lang="en-US"><span lang="en-US">Googbye drinks</span></p>
 </td>
 </tr>
@@ -230,3 +233,4 @@ color: darkblue
 
 </tbody>
 </table>
+-->
