--- a/_posts/2017-07-07-schedule.md
+++ b/_posts/2017-07-07-schedule.md
@@ -6,9 +6,7 @@ color: darkblue
 
 ---
 # Schedule
-# TBA
 
-<!--
 # Preliminary schedule
 
 
@@ -82,8 +80,8 @@ color: darkblue
 <p lang="en-US">12:00</p>
 </td>
 <td bgcolor="{{ color1 }}" width="118">&nbsp;</td>
-<td bgcolor="{{ hacking1 }}" width="127">
-<p lang="en-US"><span lang="en-US">Brain hacking</span></p>
+<td bgcolor="{{ dinner }}" width="127">
+<p lang="en-US"><span lang="en-US">Lunch</span></p>
 </td>
 <td bgcolor="{{ hacking1 }}" width="119">
 <p lang="en-US"><span lang="en-US">Brain hacking</span></p>
@@ -95,8 +93,8 @@ color: darkblue
 <p lang="en-US">13:00</p>
 </td>
 <td bgcolor="{{  color2  }}" width="118">&nbsp;</td>
-<td bgcolor="{{  dinner }}" width="127">
-<p lang="en-US"><span lang="en-US">Lunch</span></p>
+<td bgcolor="{{  hacking1 }}" width="127">
+<p lang="en-US"><span lang="en-US">Brain hacking</span></p>
 </td>
 <td bgcolor="{{  dinner }}" width="119">
 <p lang="en-US"><span lang="en-US">Lunch</span></p>
@@ -108,7 +106,7 @@ color: darkblue
 <p lang="en-US">14:00</p>
 </td>
 <td bgcolor="{{ color1 }}" width="118">&nbsp;</td>
-<td bgcolor="{{ hacking1 }}" width="127">
+<td bgcolor="{{ hacking2 }}" width="127">
 <p lang="en-US"><span lang="en-US">Brain hacking</span></p>
 </td>
 <td bgcolor="{{ presentation1 }}" width="119">
@@ -121,8 +119,8 @@ color: darkblue
 <p lang="en-US">15:00</p>
 </td>
 <td bgcolor="{{  color2  }}" width="118">&nbsp;</td>
-<td bgcolor="{{  hacking2  }}" width="127">
-<p lang="en-US"><span lang="en-US">Brain hacking</span></p>
+<td bgcolor="{{  dinner }}" width="127">
+<p lang="en-US"><span lang="en-US">Tea-time break</span></p>
 </td>
 <td bgcolor="{{  presentation2  }}" width="119">
 <p lang="en-US"><span lang="en-US">A round of 10-min final presentations</span></p>
@@ -134,8 +132,8 @@ color: darkblue
 <p lang="en-US">16:00</p>
 </td>
 <td bgcolor="{{ color1 }}" width="118">&nbsp;</td>
-<td bgcolor="{{ dinner }}" width="127">
-<p lang="en-US"><span lang="en-US">Tea-time break</span></p>
+<td bgcolor="{{ lecture }}" width="127">
+<p lang="en-US"><span lang="en-US">Talks from: Natalia Bielczyk and Geek Girls Carrots</span></p>
 </td>
 <td bgcolor="{{  presentation1  }}" width="119">
 <p lang="en-US"><span lang="en-US">A round of 10-min final presentations</span></p>
@@ -164,7 +162,7 @@ color: darkblue
 <td bgcolor="{{  presentation1  }}" width="118">
 <p lang="en-US"><span lang="en-US">5-min blitz project opening presentations</span></p>
 </td>
-<td bgcolor="{{ hacking1 }}" width="127">
+<td bgcolor="{{ hacking2 }}" width="127">
 <p lang="en-US"><span lang="en-US">Brain hacking</span></p>
 </td>
 <td bgcolor="{{  dinner }}" width="119">
@@ -179,7 +177,7 @@ color: darkblue
 <td bgcolor="{{  presentation2  }}" width="118">
 <p lang="en-US"><span lang="en-US">Prestentations by partners&sponsors </span></p>
 </td>
-<td bgcolor="{{  hacking2  }}" width="127">
+<td bgcolor="{{  hacking1  }}" width="127">
 <p lang="en-US"><span lang="en-US">Brain hacking</span></p>
 </td>
 <td bgcolor="{{  color2  }}" width="119">&nbsp;</td>
@@ -190,8 +188,9 @@ color: darkblue
 <td bgcolor="{{ color1 }}" width="24" height="13">
 <p lang="en-US">20:00</p>
 </td>
-<td bgcolor="{{  social  }}" width="118">
-<p lang="en-US"><span lang="en-US">a small excursion together to Warsaw downtown</span></p>
+<td bgcolor="{{  lecture  }}" width="118">
+<p lang="en-US"><span lang="en-US">Ignite talk: Roberto Toro</span></p>
+<p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#toro">TBA</a></em>
 </td>
 <td bgcolor="{{  dinner }}" width="127">
 <p lang="en-US"><span lang="en-US">Dinner</span></p>
@@ -199,13 +198,16 @@ color: darkblue
 <td bgcolor="{{  color1  }}" width="119">&nbsp;</td>
 
 </tr>
+
 <tr>
 <td bgcolor="{{  color2  }}" width="24" height="5">
 <p lang="en-US">21:00</p>
 </td>
-<td bgcolor="{{  color2  }}" width="118">&nbsp;</td>
+<td bgcolor="{{  hacking1  }}" width="118">
+<p lang="en-US"><span lang="en-US">Brainstorming</span></p>
+</td>
 <td bgcolor="{{  hacking2  }}" width="127">
-<p lang="en-US"><span lang="en-US">brain hacking</span></p>
+<p lang="en-US"><span lang="en-US">Brain hacking</span></p>
 </td>
 <td bgcolor="{{  color2  }}" width="119">&nbsp;</td>
 </tr>
@@ -214,23 +216,27 @@ color: darkblue
 <td bgcolor="{{ color1 }}" width="24" height="5">
 <p lang="en-US">22:00</p>
 </td>
-<td bgcolor="{{ color1 }}" width="118">&nbsp;</td>
-<td bgcolor="{{ hacking1 }}" width="127">
-<p lang="en-US"><span lang="en-US">brain hacking</span></p>
+<td bgcolor="{{ social }}" width="118">
+<p lang="en-US"><span lang="en-US">Late-night social</span></p>
+</td>
+<td bgcolor="{{ hacking2 }}" width="127">
+<p lang="en-US"><span lang="en-US">Brain hacking</span></p>
 </td>
 <td bgcolor="{{ color1 }}" width="119">&nbsp;</td>
 </tr>
+
 <tr>
 <td bgcolor="{{  color2  }}" width="24" height="4">
 <p lang="en-US">23:00</p>
 </td>
-<td bgcolor="{{  color2  }}" width="118">&nbsp;</td>
-<td bgcolor="{{  social  }}" width="127">
-<p lang="en-US"><span lang="en-US">late-night social (details t.b.a.)</span></p>
+<td bgcolor="{{  social  }}" width="118">
+<p lang="en-US"><span lang="en-US">Late-night social</span></p>
+</td>
+<td bgcolor="{{  hacking1  }}" width="127">
+<p lang="en-US"><span lang="en-US">Brain hacking</span></p>
 </td>
 <td bgcolor="{{  color2  }}" width="119">&nbsp;</td>
 </tr>
 
 </tbody>
 </table>
--->
