--- a/_posts/2017-07-07-schedule.md
+++ b/_posts/2017-07-07-schedule.md
@@ -191,7 +191,7 @@ color: darkblue
 <td bgcolor="{{  lecture  }}" width="118">
 <p lang="en-US"><span lang="en-US">Ignite talk: Roberto Toro</span></p>
 <p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#toro">TBA</a></em>
-</td>
+</span></p></td>
 <td bgcolor="{{  dinner }}" width="127">
 <p lang="en-US"><span lang="en-US">Dinner</span></p>
 </td>
@@ -203,10 +203,10 @@ color: darkblue
 <td bgcolor="{{  color2  }}" width="24" height="5">
 <p lang="en-US">21:00</p>
 </td>
-<td bgcolor="{{  hacking1  }}" width="118">
+<td bgcolor="{{  hacking2  }}" width="118">
 <p lang="en-US"><span lang="en-US">Brainstorming</span></p>
 </td>
-<td bgcolor="{{  hacking2  }}" width="127">
+<td bgcolor="{{  hacking1  }}" width="127">
 <p lang="en-US"><span lang="en-US">Brain hacking</span></p>
 </td>
 <td bgcolor="{{  color2  }}" width="119">&nbsp;</td>
