--- a/_posts/2017-07-05-speakers.md
+++ b/_posts/2017-07-05-speakers.md
@@ -15,7 +15,7 @@ color: white
 {% include speaker-card.html avatarurl="toro.jpg" profilename="Roberto Toro, PhD "  homepage="https://research.pasteur.fr/en/member/roberto-toro/" affiliation="Department of Neuroscience, Institut Pasteur,<br> Paris, France"%}
 
 
-
+#### TBA
 **Abstract: TBA**
 
 **Bio:**
@@ -23,28 +23,25 @@ Roberto Toro is a distinguished personality from open science movement with grea
 He is currently leading a team of students (PhD, MSc) from interdisciplinary backgrounds. They develop computational neuroanatomy methods based on their theoretical models which they use to analyse the normal diversity of human brain anatomy, as well as to look for differences associated with neurodevelopmental pathologies. He is particularly interested in Autism Spectrum Disorders.
 
 
-<!--
-<a name="kirstie"></a>
-{% include speaker-card.html avatarurl="kirstie.png" profilename="Kirstie Whitaker, PhD "   homepage="https://whitakerlab.github.io" affiliation="Brain Mapping Unit, Department of Psychiatry, University of Cambridge" %}
-#### Shooting for the stars: Moving from reproducible to open research
+
+<a name="nat"></a>
+{% include speaker-card.html avatarurl="nat.jpg" profilename="Natalia Bielczyk, MSc "   homepage="https://www.nataliabielczyk.com" affiliation="Solaris Research and Development Foundation, Nijmegen, The Netherlands" %}
+#### Open mentoring
 **Abstract:**
-This talk will discuss the perceived and actual barriers experienced by researchers attempting to do reproducible research in neuroscience, and give practical guidance on how they can be overcome. It will include suggestions on how to make your code and data available and usable for others (including a strong suggestion to document both clearly so you don’t have to reply to lots of email questions from future users). However, as this is a Brainhack event, Dr Whitaker will push you further: to consider working openly. Open research is an important step in changing an academic reward system from its current focus on individual contributions and “getting there first” to sharing work as it is being created and allowing collaborators to contribute from the start. All the AoN Brainhack Warsaw participants will leave knowing there is something they can do to step towards making their research reproducible, and hopefully a few will be inspired to make more radical changes.
+One of the strongest movements in academia nowadays, is the Open Science movement. Its main postulates are: sharing access to high quality datasets with the general public and setting new standards for research reproducibility, e.g. by sharing codes and pipelines through open-access services such as GitHub. What else can and should we share in academia? Mentoring is one example of an asset which can also be shared between researchers all around the world. Today, it is no longer the case that mentoring experience can only be received from the direct supervisor; one can and should search out for advice from multiple researchers at every career stage, independently from geographical location - especially when there is little opportunity to be mentored in the local research environment.
+
+Within the Organization for Human Brain Mapping Student and Postdoc Special Interest Group, we are interested in assisting early career researchers in accelerating their careers. One of our main initiatives is the International Online Mentoring Programme. Within the Programme, every member of the OHBM community worldwide can become either a mentor, a mentee or both. In this blitz talk, I will review the lessons we learned after over two years of running the programme, and recommendations we can give to young generation of researchers who are just entering their PhD.
+
 
 **Bio:**
-Kirstie is a Research Fellow at The Alan Turing Institute (London, UK). She completed her PhD in Neuroscience at the University of California, Berkeley in 2012 and holds a BSc in Physics from the University of Bristol and an MSc in Medical Physics from the University of British Columbia. She was a postdoctoral researcher in the Department of Psychiatry at the University of Cambridge from 2012 to 2017. Dr Whitaker uses magnetic resonance imaging to study child and adolescent brain development and is a passionate advocate for reproducible neuroscience. She is a Fulbright scholarship alumna and 2016/17 Mozilla Fellow for Science. Kirstie was named, with her collaborator Petra Vertes, as a 2016 Global Thinker by Foreign Policy magazine.
+Natalia Bielczyk is now completing her thesis within the Donders Graduate School, Donders Institute for Brain, Cognition and Behavior, Nijmegen, the Netherlands. Her research concerns developing new methods for connectomics in the domain of cognitive neuroimaging, i.e. for functional and effective connectivity research. She also currently holds a position of a Career Development and Mentoring Manager within the Organization for Human Brain Mapping Student and Postdoc Special Interest Group (www.ohbmtrainees.com).
 
 
+<!--
+<a name="geek"></a>
+{% include speaker-card.html avatarurl="geek.png" profilename=" "  affiliation="Geek Girls Carotts, Warsaw"%}
 
-<a name="charl"></a>
-{% include speaker-card.html avatarurl="charl.png" profilename=" Charl Linssen, PhD candidate "  affiliation="The Tiesinga group, Department of Neuroinformatics,<br> Donders Institute for Brain, Cognition and Behaviour,<br> Nijmegen, the Netherlands"%}
-
-#### Convergence between artificial intelligence and simulation of the brain: from theory to GitHub
-**Abstract:** Artificial neural networks have received a recent spur in attention after notable successes in diverse areas: computer vision, motor control, natural language processing, as agents in computer and board games, and many others. Computer simulation of neural networks has been around since the late 1950s, but recent successes rely both on better knowledge of how to design and train these networks, as well as increases in scale made possible by increased computational power and the availability of large training datasets ("big data").
-
-For a neuroscientist, neural network simulation can be of interest from two different points of view: in the theoretical sense, as a model of how real brains work, or in the empirical sense, as a tool that analyses a dataset or performs a certain task (as in the game playing agent). These objectives may not be mutually exclusive, but depending on the application or goal, a researcher has to make concrete decisions about what model to use to approach it.
-
-In this talk, we will review modern neural network architectures and consider them from the perspective of both theory and application. For example, if a certain network model requires a certain training paradigm, this could, on the application side, inform the allocation of CPU time, while on the theoretical side, lead to empirical predictions on neuronal biophysics involved in plasticity. Taken together, the goal is to give the audience (that's you!) the knowledge needed to critically assess neural network models, and subsequently to download and run the chosen network on your own dataset and with your own selection of parameters.
-
-**Bio:**
-Charl has a background in engineering, and is particularly interested in systems that actively respond to their environment. After studying Embedded Systems at TU Eindhoven, he realised that brains, or even something as comparatively simple as the nervous system of an insect, are ultimate embedded systems. Following this, he went on to pursue a Master’s program in Cognitive Neuroscience at Radboud University, where he is currently pursuing a PhD on the topic of active sensing in the rodent whisker system.  
+#### TBA
+**Abstract:** TBA
+**Bio:** TBA
 -->
