--- a/_posts/2017-07-07-schedule.md
+++ b/_posts/2017-07-07-schedule.md
@@ -133,8 +133,9 @@ color: darkblue
 </td>
 <td bgcolor="{{ color1 }}" width="118">&nbsp;</td>
 <td bgcolor="{{ lecture }}" width="127">
-<p lang="en-US"><span lang="en-US">Talks from: Natalia Bielczyk and Geek Girls Carrots</span></p>
-</td>
+<p lang="en-US"><span lang="en-US">Talks from:</span></p>
+<p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#nat">Natalia Bielczyk</a></em>
+</span></p></td>
 <td bgcolor="{{  presentation1  }}" width="119">
 <p lang="en-US"><span lang="en-US">A round of 10-min final presentations</span></p>
 </td>
