--- a/_posts/2017-07-06-projects.md
+++ b/_posts/2017-07-06-projects.md
@@ -102,7 +102,7 @@ Participants will be encouraged to develop their own classification pipeline, fo
 <a id="project3"></a>
 ## Project 3: Network analysis of the electrical activity of the brain during epileptic seizures
 
-#### Authors: Jarosław Klamut, MSc <a href="mailto:jaroslaw.klamut@fuw.edu.pl><sup>1</sup><i class="fa fa-envelope"></i></a> / Mateusz Wiliński
+#### Authors: Jarosław Klamut, MSc<sup>1</sup> <a href="mailto:jaroslaw.klamut@fuw.edu.pl><i class="fa fa-envelope"></i></a> / Mateusz Wiliński
 
 1. Faculty of Physics, University of Warsaw, Poland
 
@@ -140,7 +140,7 @@ Epilepsy is a highly prevalent disorder. 1% of all emergency department visits i
 <a id="project4"></a>
 ## Project 4: Deep Frankenstein: dissecting and sewing artificial neural networks
 
-#### Authors: Piotr Migdał, PhD <a href="mailto:pmigdal@gmail.com"><sup>1</sup><i class="fa fa-envelope"></i></a>  
+#### Authors: Piotr Migdał, PhD<sup>1</sup> <a href="mailto:pmigdal@gmail.com">i class="fa fa-envelope"></i></a>  
 
 1. p.migdal.pl
 
@@ -173,7 +173,7 @@ https://docs.google.com/document/d/1Kn3jQMLYsqlRcT4M0RXo6mYeICOzUtOBxd4V6BaPBQ4/
 <a id="project5"></a>
 ## Project 5: Tackling the ABCD Neurocognitive Prediction Challenge
 
-#### Authors: Hanna Nowicka <a href="mailto:hn.nowicka@gmail.com"><sup>1</sup><i class="fa fa-envelope"></i></a> / Katja Heuer / Roberto Toro
+#### Authors: Hanna Nowicka <sup>1</sup> <a href="mailto:hn.nowicka@gmail.com"><i class="fa fa-envelope"></i></a>
 
 1.Oxford Centre for Functional MRI of the Brain (FMRIB), Wellcome Centre for Integrative Neuroimaging (WIN), University of Oxford, United Kingdom
 
@@ -205,7 +205,7 @@ Hopefully, we can get group with varied skills and learn from each other skills 
 <a id="project6"></a>
 ## Project 6: Multidimensionality problem in passive BCI for game control
 
-#### Authors: Maciej Rudziński <a href="mailto:rudzinskimaciej@gmail.com"><sup>1</sup><i class="fa fa-envelope"></i></a> /Adrian Elczewski
+#### Authors: Maciej Rudziński <sup>1</sup> <a href="mailto:rudzinskimaciej@gmail.com"><i class="fa fa-envelope"></i></a> /Adrian Elczewski
 
 1.BrainAttach; Brain Tracking
 
